@@ -2,10 +2,13 @@ package uk.gov.hmcts.reform.civil.service.robotics.mapper;
 
 import feign.FeignException;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
@@ -25,6 +28,7 @@ import uk.gov.hmcts.reform.civil.enums.ClaimTypeUnspec;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.Address;
 import uk.gov.hmcts.reform.civil.model.CaseData;
+import uk.gov.hmcts.reform.civil.model.Party;
 import uk.gov.hmcts.reform.civil.model.SolicitorOrganisationDetails;
 import uk.gov.hmcts.reform.civil.model.robotics.CaseHeader;
 import uk.gov.hmcts.reform.civil.model.robotics.NoticeOfChange;
@@ -34,7 +38,6 @@ import uk.gov.hmcts.reform.civil.prd.model.ContactInformation;
 import uk.gov.hmcts.reform.civil.prd.model.DxAddress;
 import uk.gov.hmcts.reform.civil.prd.model.Organisation;
 import uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder;
-import uk.gov.hmcts.reform.civil.sampledata.PartyBuilder;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.OrganisationService;
 import uk.gov.hmcts.reform.civil.service.Time;
@@ -42,15 +45,24 @@ import uk.gov.hmcts.reform.civil.service.UserService;
 import uk.gov.hmcts.reform.civil.service.flowstate.SimpleStateFlowEngine;
 import uk.gov.hmcts.reform.civil.service.flowstate.TransitionsTestConfiguration;
 import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsEventTextFormatter;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsRespondentResponseSupport;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsTimelineHelper;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsPartyLookup;
+import uk.gov.hmcts.reform.civil.service.robotics.support.RoboticsCaseDataSupport;
 import uk.gov.hmcts.reform.civil.stateflow.simplegrammar.SimpleStateFlowBuilder;
 import uk.gov.hmcts.reform.civil.utils.LocationRefDataUtil;
 
+import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static java.time.format.DateTimeFormatter.ISO_DATE;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
@@ -69,25 +81,39 @@ import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
     RoboticsDataMapperForUnspec.class,
     RoboticsAddressMapper.class,
     AddressLinesMapper.class,
-    OrganisationService.class
+    OrganisationService.class,
+    RoboticsRespondentResponseSupport.class,
+    RoboticsEventTextFormatter.class,
+    RoboticsTimelineHelper.class,
+    RoboticsPartyLookup.class,
+    RoboticsCaseDataSupport.class
 })
 @ExtendWith(SpringExtension.class)
 class RoboticsDataMapperForUnspecTest {
 
-    private static final ContactInformation CONTACT_INFORMATION = ContactInformation.builder()
-        .addressLine1("line 1")
-        .addressLine2("line 2")
-        .postCode("AB1 2XY")
-        .county("My county")
-        .dxAddress(List.of(DxAddress.builder()
-            .dxNumber("DX 12345")
-            .build()))
-        .build();
-    private static final Organisation ORGANISATION = Organisation.builder()
-        .organisationIdentifier("QWERTY R")
-        .name("Org Name")
-        .contactInformation(List.of(CONTACT_INFORMATION))
-        .build();
+    private static final ContactInformation CONTACT_INFORMATION = new ContactInformation()
+        .setAddressLine1("line 1")
+        .setAddressLine2("line 2")
+        .setPostCode("AB1 2XY")
+        .setCounty("My county")
+        .setDxAddress(List.of(new DxAddress()
+            .setDxNumber("DX 12345")));
+    private static final Organisation ORGANISATION = new Organisation()
+        .setOrganisationIdentifier("QWERTY R")
+        .setName("Org Name")
+        .setContactInformation(List.of(CONTACT_INFORMATION));
+
+    private ContactInformation copyContactInformation(ContactInformation source) {
+        return new ContactInformation()
+            .setAddressLine1(source.getAddressLine1())
+            .setAddressLine2(source.getAddressLine2())
+            .setAddressLine3(source.getAddressLine3())
+            .setPostCode(source.getPostCode())
+            .setCounty(source.getCounty())
+            .setCountry(source.getCountry())
+            .setTownCity(source.getTownCity())
+            .setDxAddress(source.getDxAddress());
+    }
 
     @MockBean
     OrganisationApi organisationApi;
@@ -132,7 +158,7 @@ class RoboticsDataMapperForUnspecTest {
     void shouldMapToRoboticsCaseData_whenDefendantIsNotRegistered() {
         CaseData caseData = CaseDataBuilder.builder()
             .atStatePaymentSuccessful()
-            .respondentSolicitor1OrganisationDetails(createSolicitorOrganisationDetails("My Organisation", "me@server.net", "0123456789", "9999999999", "Dx"))
+            .respondentSolicitor1OrganisationDetails(createSolicitorOrganisationDetails())
             .build();
 
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.PERSONAL_INJURY);
@@ -147,7 +173,7 @@ class RoboticsDataMapperForUnspecTest {
     void shouldMapToRoboticsCaseData_whenDefendantIsNotRegistered_DtsCci_1478() {
         CaseData caseData = CaseDataBuilder.builder()
             .atStatePaymentSuccessful()
-            .respondentSolicitor1OrganisationDetails(createSolicitorOrganisationDetails("My Organisation", "me@server.net", "0123456789", "9999999999", "Dx"))
+            .respondentSolicitor1OrganisationDetails(createSolicitorOrganisationDetails())
             .build();
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.CLINICAL_NEGLIGENCE);
         caseData.setClaimType(ClaimType.PERSONAL_INJURY);
@@ -164,7 +190,7 @@ class RoboticsDataMapperForUnspecTest {
 
         assertThat(roboticsCaseData.getSolicitors()).hasSize(2);
 
-        var firstSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var firstSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(firstSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(firstSolicitor.getName()).isEqualTo("Org Name");
         assertThat(firstSolicitor.getContactDX()).isEqualTo("DX 12345");
@@ -191,7 +217,7 @@ class RoboticsDataMapperForUnspecTest {
         CustomAssertions.assertThat(roboticsCaseData).isEqualTo(caseData);
         assertThat(roboticsCaseData.getSolicitors()).hasSize(2);
 
-        var firstSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var firstSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(firstSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(firstSolicitor.getName()).isEqualTo("Org Name");
         assertThat(firstSolicitor.getContactDX()).isEqualTo("DX 12345");
@@ -229,13 +255,14 @@ class RoboticsDataMapperForUnspecTest {
         CustomAssertions.assertThat(roboticsCaseData).isEqualTo(caseData);
         assertThat(roboticsCaseData.getSolicitors()).hasSize(2);
 
-        var firstSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var firstSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(firstSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(firstSolicitor.getName()).isEqualTo("Org Name");
         assertThat(firstSolicitor.getContactDX()).isEqualTo("DX 12345");
         assertThat(firstSolicitor.getContactEmailAddress()).isEqualTo("applicantsolicitor@example.com");
 
-        ContactInformation contactInformation = CONTACT_INFORMATION.toBuilder().addressLine1("line 1 provided").build();
+        ContactInformation contactInformation = copyContactInformation(CONTACT_INFORMATION)
+            .setAddressLine1("line 1 provided");
         CustomAssertions.assertThat(List.of(contactInformation))
             .isEqualTo(firstSolicitor.getAddresses().getContactAddress());
 
@@ -258,7 +285,7 @@ class RoboticsDataMapperForUnspecTest {
         RoboticsCaseData roboticsCaseData = mapper.toRoboticsCaseData(caseData, BEARER_TOKEN);
 
         assertThat(roboticsCaseData.getSolicitors()).hasSize(1);
-        var applicantSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var applicantSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(applicantSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(applicantSolicitor.getName()).isEqualTo("Org Name");
         assertThat(applicantSolicitor.getContactDX()).isEqualTo("DX 12345");
@@ -278,7 +305,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndClaimantIsPresent() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setApplicant2(PartyBuilder.builder().individual().build());
+        caseData.setApplicant2(createIndividualParty());
         caseData.setAddApplicant2(YES);
         RoboticsCaseData roboticsCaseData = mapper.toRoboticsCaseData(caseData, BEARER_TOKEN);
         assertThat(roboticsCaseData.getLitigiousParties()).hasSize(3);
@@ -287,7 +314,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsPresent() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.PERSONAL_INJURY);
         caseData.setClaimType(ClaimType.PERSONAL_INJURY);
@@ -299,7 +326,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsRepresented() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.PERSONAL_INJURY);
@@ -312,7 +339,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsRepresentedSameSolicitor() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setRespondent2SameLegalRepresentative(YES);
@@ -326,7 +353,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldCheck_whenFeignException() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setRespondent2SameLegalRepresentative(YES);
@@ -342,7 +369,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsRepresentedDifferentSolicitor() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setRespondent2SameLegalRepresentative(NO);
@@ -352,7 +379,7 @@ class RoboticsDataMapperForUnspecTest {
         CustomAssertions.assertThat(roboticsCaseData).isEqualTo(caseData);
         assertThat(roboticsCaseData.getSolicitors()).hasSize(3);
 
-        var firstSolicitor = roboticsCaseData.getSolicitors().get(0);
+        var firstSolicitor = roboticsCaseData.getSolicitors().getFirst();
         assertThat(firstSolicitor.getOrganisationId()).isEqualTo("QWERTY A");
         assertThat(firstSolicitor.getName()).isEqualTo("Org Name");
         assertThat(firstSolicitor.getContactDX()).isEqualTo("DX 12345");
@@ -380,7 +407,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsRepresentedNotRegistered() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(YES);
         caseData.setRespondent2OrgRegistered(NO);
@@ -395,7 +422,7 @@ class RoboticsDataMapperForUnspecTest {
     @Test
     void shouldMapToRoboticsCaseDataWhen2ndDefendantIsNotRepresented() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        caseData.setRespondent2(PartyBuilder.builder().company().build());
+        caseData.setRespondent2(createCompanyParty());
         caseData.setAddRespondent2(YES);
         caseData.setRespondent2Represented(NO);
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.PERSONAL_INJURY);
@@ -417,42 +444,36 @@ class RoboticsDataMapperForUnspecTest {
         caseData.setAllocatedTrack(AllocatedTrack.valueOf(claimTrack));
         caseData.setClaimTypeUnSpec(ClaimTypeUnspec.PERSONAL_INJURY);
 
-        RoboticsCaseData testHeader = RoboticsCaseData.builder()
-            .header(CaseHeader.builder()
-                        .caseNumber(caseData.getLegacyCaseReference())
-                        .owningCourtCode("807")
-                        .owningCourtName("CCMCC")
-                        .caseType("PERSONAL INJURY")
-                        .preferredCourtCode("121")
-                        .caseAllocatedTo(expectedName)
-                        .build())
-            .build();
+        CaseHeader expectedHeader = new CaseHeader();
+        expectedHeader.setCaseNumber(caseData.getLegacyCaseReference());
+        expectedHeader.setOwningCourtCode("807");
+        expectedHeader.setOwningCourtName("CCMCC");
+        expectedHeader.setCaseType("PERSONAL INJURY");
+        expectedHeader.setPreferredCourtCode("121");
+        expectedHeader.setCaseAllocatedTo(expectedName);
 
         when(locationRefDataUtil.getPreferredCourtData(any(), any(), eq(true))).thenReturn("121");
         RoboticsCaseData roboticsCaseData = mapper.toRoboticsCaseData(caseData, BEARER_TOKEN);
 
         CustomAssertions.assertThat(roboticsCaseData).isEqualTo(caseData);
-        assertThat(roboticsCaseData.getHeader()).isEqualTo(testHeader.getHeader());
+        assertThat(roboticsCaseData.getHeader()).isEqualTo(expectedHeader);
     }
 
     @Test
     void shouldReturnHeaderWhenPreferredCourtCodeisUnavailableFromLocationRefData() {
         CaseData caseData = CaseDataBuilder.builder().atStatePaymentSuccessful().build();
-        RoboticsCaseData testHeader = RoboticsCaseData.builder()
-            .header(CaseHeader.builder()
-                        .caseNumber(caseData.getLegacyCaseReference())
-                        .owningCourtCode("807")
-                        .owningCourtName("CCMCC")
-                        .caseType("CLAIM - UNSPEC ONLY")
-                        .preferredCourtCode("")
-                        .caseAllocatedTo("FAST TRACK")
-                        .build())
-            .build();
+        CaseHeader expectedHeader = new CaseHeader();
+        expectedHeader.setCaseNumber(caseData.getLegacyCaseReference());
+        expectedHeader.setOwningCourtCode("807");
+        expectedHeader.setOwningCourtName("CCMCC");
+        expectedHeader.setCaseType("CLAIM - UNSPEC ONLY");
+        expectedHeader.setPreferredCourtCode("");
+        expectedHeader.setCaseAllocatedTo("FAST TRACK");
 
         when(locationRefDataUtil.getPreferredCourtData(any(), any(), eq(true))).thenReturn("");
         RoboticsCaseData roboticsCaseData = mapper.toRoboticsCaseData(caseData, BEARER_TOKEN);
 
-        assertThat(roboticsCaseData.getHeader()).isEqualTo(testHeader.getHeader());
+        assertThat(roboticsCaseData.getHeader()).isEqualTo(expectedHeader);
     }
 
     @Test
@@ -481,9 +502,9 @@ class RoboticsDataMapperForUnspecTest {
 
         assertThat(roboticsCaseData.getNoticeOfChange()).isEqualTo(
             List.of(
-                NoticeOfChange.builder().litigiousPartyID("001").dateOfNoC(app1NocDate.format(ISO_DATE)).build(),
-                NoticeOfChange.builder().litigiousPartyID("002").dateOfNoC(res1NocDate.format(ISO_DATE)).build(),
-                NoticeOfChange.builder().litigiousPartyID("003").dateOfNoC(res2NocDate.format(ISO_DATE)).build())
+                new NoticeOfChange().setLitigiousPartyID("001").setDateOfNoC(app1NocDate.format(ISO_DATE)),
+                new NoticeOfChange().setLitigiousPartyID("002").setDateOfNoC(res1NocDate.format(ISO_DATE)),
+                new NoticeOfChange().setLitigiousPartyID("003").setDateOfNoC(res2NocDate.format(ISO_DATE)))
         );
     }
 
@@ -513,9 +534,9 @@ class RoboticsDataMapperForUnspecTest {
 
         assertThat(roboticsCaseData.getNoticeOfChange()).isEqualTo(
             List.of(
-                NoticeOfChange.builder().litigiousPartyID("001").dateOfNoC(app1NocDate.format(ISO_DATE)).build(),
-                NoticeOfChange.builder().litigiousPartyID("002").dateOfNoC(res1NocDate.format(ISO_DATE)).build(),
-                NoticeOfChange.builder().litigiousPartyID("003").dateOfNoC(res2NocDate.format(ISO_DATE)).build())
+                new NoticeOfChange().setLitigiousPartyID("001").setDateOfNoC(app1NocDate.format(ISO_DATE)),
+                new NoticeOfChange().setLitigiousPartyID("002").setDateOfNoC(res1NocDate.format(ISO_DATE)),
+                new NoticeOfChange().setLitigiousPartyID("003").setDateOfNoC(res2NocDate.format(ISO_DATE)))
         );
     }
 
@@ -559,19 +580,94 @@ class RoboticsDataMapperForUnspecTest {
         assertThat(roboticsCaseData.getHeader().getCaseAllocatedTo()).isEqualTo(expectedTrack);
     }
 
-    private PreviousOrganisationCollectionItem buildPreviousOrganisation(String name, LocalDateTime toDate) {
-        return PreviousOrganisationCollectionItem.builder().value(
-            PreviousOrganisation.builder().organisationName(name).toTimestamp(toDate).build()).build();
+    private Party createIndividualParty() {
+        Party party = new Party();
+        party.setType(Party.Type.INDIVIDUAL);
+        party.setIndividualTitle("Mr.");
+        party.setIndividualFirstName("John");
+        party.setIndividualLastName("Rambo");
+        party.setIndividualDateOfBirth(LocalDate.now().minusYears(30));
+        party.setPartyName("Mr. John Rambo");
+        Address address = new Address();
+        address.setAddressLine1("1 Example Street");
+        address.setPostCode("AB1 1AB");
+        party.setPrimaryAddress(address);
+        party.setPartyPhone("01234 567890");
+        party.setPartyEmail("john.rambo@example.com");
+        return party;
     }
 
-    private SolicitorOrganisationDetails createSolicitorOrganisationDetails(String orgName, String email, String phone, String fax, String dx) {
+    private Party createCompanyParty() {
+        Party party = new Party();
+        party.setType(Party.Type.COMPANY);
+        party.setCompanyName("Company ltd");
+        party.setPartyName("Company ltd");
+        Address address = new Address();
+        address.setAddressLine1("1 Example Street");
+        address.setPostCode("AB1 1AB");
+        party.setPrimaryAddress(address);
+        party.setPartyPhone("01234 567890");
+        party.setPartyEmail("company@example.com");
+        return party;
+    }
+
+    private PreviousOrganisationCollectionItem buildPreviousOrganisation(String name, LocalDateTime toDate) {
+        PreviousOrganisation previousOrganisation = new PreviousOrganisation();
+        previousOrganisation.setOrganisationName(name);
+        previousOrganisation.setToTimestamp(toDate);
+        return new PreviousOrganisationCollectionItem(null, previousOrganisation);
+    }
+
+    private SolicitorOrganisationDetails createSolicitorOrganisationDetails() {
         SolicitorOrganisationDetails details = new SolicitorOrganisationDetails();
-        details.setOrganisationName(orgName);
-        details.setEmail(email);
-        details.setPhoneNumber(phone);
-        details.setFax(fax);
-        details.setDx(dx);
+        details.setOrganisationName("My Organisation");
+        details.setEmail("me@server.net");
+        details.setPhoneNumber("0123456789");
+        details.setFax("9999999999");
+        details.setDx("Dx");
         details.setAddress(new Address());
         return details;
+    }
+
+    @Nested
+    class OtherRemedy {
+        @ParameterizedTest
+        @MethodSource("housingDisrepairClaimTypes")
+        void shouldReturnCorrectHeaderAndRoboticDataWithOtherRemedyFeeAppliedWhenDeclarationAdded(ClaimTypeUnspec claimTypeUnspec, ClaimType claimType) {
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimIssuedUnrepresentedDefendants()
+                .otherRemedyClaimDeclarationAdded()
+                .otherRemedyFee(BigDecimal.valueOf(100))
+                .build();
+            caseData.setClaimTypeUnSpec(claimTypeUnspec);
+            caseData.setClaimType(claimType);
+            when(locationRefDataUtil.getPreferredCourtData(any(), any(), eq(true))).thenReturn("");
+            RoboticsCaseData roboticsCaseData = mapper.toRoboticsCaseData(caseData, BEARER_TOKEN);
+
+            assertThat(roboticsCaseData.getHeader().getCaseType()).isEqualTo("Multi/Other");
+
+            assertThat(roboticsCaseData.getClaimDetails().getCourtFee().intValue()).isEqualTo(2);
+        }
+
+        @ParameterizedTest
+        @MethodSource("housingDisrepairClaimTypes")
+        void shouldReturnCorrectHeaderAndOnlyCourtFeeWithoutOtherRemedyFeeWhenDeclarationIsNotAdded(ClaimTypeUnspec claimTypeUnspec, ClaimType claimType) {
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimIssuedUnrepresentedDefendants()
+                .otherRemedyFee(BigDecimal.valueOf(100))
+                .build();
+            caseData.setClaimTypeUnSpec(claimTypeUnspec);
+            caseData.setClaimType(claimType);
+            when(locationRefDataUtil.getPreferredCourtData(any(), any(), eq(true))).thenReturn("");
+            RoboticsCaseData roboticsCaseData = mapper.toRoboticsCaseData(caseData, BEARER_TOKEN);
+
+            assertThat(roboticsCaseData.getHeader().getCaseType()).isEqualTo("Multi/Other");
+
+            assertThat(roboticsCaseData.getClaimDetails().getCourtFee().intValue()).isEqualTo(1);
+        }
+
+        private static Stream<Arguments> housingDisrepairClaimTypes() {
+            return Stream.of(arguments(ClaimTypeUnspec.HOUSING_DISREPAIR, ClaimType.HOUSING_DISREPAIR),
+                             arguments(ClaimTypeUnspec.DAMAGES_AND_OTHER_REMEDY, ClaimType.DAMAGES_AND_OTHER_REMEDY));
+        }
+
     }
 }
